# Comp001

./: CMakeLists.txt  README.md
resource/: LED.knob  comp_editor.uidesc  win32resource.rc
source/: comp_cids.h  comp_controller.cpp  comp_controller.h  comp_entry.cpp  comp_processor.cpp  comp_processor.h  version.h
